# ok_web_backend_memgraph

./: .clang-format  .gitignore  CMakeLists.txt  ReadMe.md  caf-application.conf  main.cc
config/: local_config.json  local_config_ubuntu.json  package.json  server_config.json
docs/: arch.sh  mac.sh  third_party.txt  ubuntu.sh  ubuntu_install.txt
gtest/: CMakeLists.txt  gtest.cc
inc/: Api.hpp  alias.hpp
inc/actor_system/: CAF.hpp  ChatRoomActor.hpp  GlobalActor.hpp  GraphStateActor.hpp  IntegrationActors.hpp  JsActor.hpp  MainActor.hpp  MutateActors.hpp  MutationActor.hpp  Routes.hpp  SimpleRequest.hpp  SimpleRequestHelper.hpp  SyncActor.hpp  TableActor.hpp  V8Actor.hpp  V8StateActor.hpp  WSEventMap.hpp  WsConnectionActor.hpp  WsConnectionV8Actor.hpp
inc/db/: DatabaseApi.hpp  Permission.hpp  Session.hpp  auth_fns.hpp  db_functions.hpp  fuerteclient.hpp  fuerteclientPool.hpp  get_functions.hpp  mgclientPool.hpp  mutate_functions.hpp
inc/lib/: json_functions.hpp  mg_helper.hpp  os_functions.hpp  string_functions.hpp
inc/mutate/: Field.hpp  Mutate.hpp  MutatePosition.hpp  MutateSchema.hpp  MutateSchemaImpl.hpp  Relation.hpp
inc/table/: Column.hpp  Table.hpp  TableSchema.hpp  TableSchemaExternal.hpp  TableSchemaImpl.hpp
inc/utils/: BatchArrayMessage.hpp  ErrorConstants.hpp  GlobalSettings.hpp  html_functions.hpp  json_functions.hpp  mg_helper.hpp  os_functions.hpp  string_functions.hpp  time_functions.hpp
src/: Api.cpp  AuthApi.cpp
src/actor_system/: CAF.cpp  ChatRoomActor.cpp  GlobalActor.cpp  GraphStateActor.cpp  IntegrationActors.cpp  MainActor.cpp  MutateActors.cpp  MutationActor.cpp  SyncActor.cpp  TableActor.cpp  WSEventMap.cpp  WsConnectionActor.cpp
src/db/: DatabaseApi.cpp  Permission.cpp  auth_fns.cpp  db_functions.cpp  fuerteclient.cpp  fuerteclientPool.cpp  get_functions.cpp  mgclientPool.cpp  mutate_functions.cpp
src/lib/: mg_helper.cpp  os_functions.cpp
src/mutate/: Mutate.cpp  MutatePosition.cpp  MutateSchema.cpp  MutateSchemaImpl.cpp
src/table/: Table.cpp  TableSchema.cpp  TableSchemaExternal.cpp  TableSchemaImpl.cpp
src/utils/: BatchArrayMessage.cpp  html_functions.cpp  mg_helper.cpp  os_functions.cpp
test/: CMakeLists.txt
